--- a/src/components/FindUsers/Users.module.css
+++ b/src/components/FindUsers/Users.module.css
@@ -1,7 +1,8 @@
-/* .findUsersPage {
-} */
-
 .findUsersPage .userPhoto {
     width: 150px;
     height: 150px;
+}
+
+.selectedPage {
+    font-weight: bold;
 }
