redux ducks, refactoring

--- a/src/Validate/FormsControl.module.css
+++ b/src/Validate/FormsControl.module.css
@@ -1,9 +1,7 @@
-.formControl .error input,
-.error textarea {
-    border: red 1px solid;
-
+.errorTextarea {
+  border: red 1px solid;
 }
 
 .errorSpan {
-    color: red;
+  color: red;
 }
