--- a/src/App.css
+++ b/src/App.css
@@ -1,22 +1,17 @@
 .app-wrapper {
-    display: grid;
-    grid-template-areas: 
-    'h h h h h h h '
-    'n c c c  c c c '
-    'n c c c c c c ';
-    width: 100%;
+  display: grid;
+  grid-template-areas:
+    "h h h h h h h "
+    "n c c c  c c c "
+    "n c c c c c c ";
+  width: 100%;
 }
 
 .app-wrapper-content {
-    grid-area: c;
-    background-color: rgb(136, 118, 236);
+  grid-area: c;
+  background-color: rgb(136, 118, 236);
 }
 
 .app-wrapper-content img {
-    width: 100%;
+  width: 100%;
 }
-
-
-
-
-
