--- a/src/components/common/Paginator/Paginator.module.css
+++ b/src/components/common/Paginator/Paginator.module.css
@@ -1,3 +1,12 @@
 .selectedPage {
   font-weight: bold;
+  border: black 1px solid;
+}
+
+.pageNumber {
+  margin: 5px;
+}
+
+.paginator {
+  padding: 10px;
 }
