--- a/src/components/Navbar/Navbar.module.css
+++ b/src/components/Navbar/Navbar.module.css
@@ -1,20 +1,20 @@
 .nav {
-    grid-area: n;
-    background-color: rgb(31, 107, 107);
-    padding: 15px;
-    }
+  grid-area: n;
+  background-color: rgb(31, 107, 107);
+  padding: 15px;
+  margin: 5px;
+  border-radius: 5px;
+}
 
 nav a {
-    color: white;
-    text-decoration: none;
+  color: white;
+  text-decoration: none;
 }
 
 .active {
-    color: gold;
+  color: gold;
 }
 
 .nav .item .findUsers {
-    padding-top: 150px;
+  padding-top: 150px;
 }
-
-
